Update styles and fix layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@
   --text-link: var(--grey-dark-darker); /* Darker grey for links */
   --text-title: var(--foreground); /* Main title color */
 
-  --noise-opacity: 0.7;
+  --noise-opacity: 0.6;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -86,7 +86,6 @@ footer {
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><filter id="a"><feTurbulence type="fractalNoise" baseFrequency=".618" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23a)"/></svg>');
   background-repeat: repeat;
   background-size: 182px;
-  filter: brightness(5);
   opacity: var(--noise-opacity);
   pointer-events: none;
   position: absolute;
